Fix Contact form alignment issue on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -205,6 +205,7 @@ header {
   height: 100px;
   padding: 12px 4px;
   width: 50%;
+  min-width: 200px;
 }
 
 .contact-form button {
